--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 
 #root {
+  width: 100%;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -43,7 +44,82 @@
 .read-the-docs {
   color: #888;
 }
-.container-custom {
-  max-width: 100% !important; /* Teljes szélesség */
-  padding: 0 20px; /* Változtathatod a belső margót igény szerint */
+
+/* SAJAT CSS */
+body {
+  background: rgb(0,255,132);
+  background: -moz-linear-gradient(90deg, rgba(0,255,132,1) 0%, rgba(0,164,255,1) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(0,255,132,1) 0%, rgba(0,164,255,1) 100%);
+  background: linear-gradient(90deg, rgba(0,255,132,1) 0%, rgba(0,164,255,1) 100%);
 }
+
+.main_container {
+  width: 100%;
+  max-width: 1182px !important; /* Teljes szélesség */
+  padding: 0 24px; 
+  margin: 0px auto;
+}
+
+.form_style {
+  width: 100%;
+  max-width: 320px;
+  margin: 0px auto;
+
+}
+.main_form {
+  padding: 48px;
+  background-color: #fff;
+  max-width: 320px;
+  margin: 0px auto;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
+}
+.form_style input {
+  width: 100%;
+  padding: 8px;
+  border: unset;
+  border-radius: 8px;
+  margin: 8px auto;
+  border-bottom: 2px solid #00d1c3;
+}
+
+.form_style input:focus {
+  /* box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.2); */
+  outline: none;
+  border-bottom: 2px solid #00c1d9;
+}
+
+button {
+  background-color: #00a4ff;
+  color: #fff;
+  margin: 32px auto 0px;
+}
+
+.home_flex_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.3);
+}
+
+.home_flex_container div {
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+
+}
+.home_flex_container div:last-of-type {
+  padding: 32px;
+}
+.home_flex_container div img {
+  max-width: 800px;
+}
+/* .home_flex_container div:first-of-type {
+  background: url(../src/assets/img/keddi_foci_bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+} */
