--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@ button {
   background-color: #fff;
   border-radius: 12px;
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 }
 
 .home_flex_container div {
