--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
-@import './assets/css/template.css';
 
 
 #root {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -58,6 +57,7 @@ body {
   max-width: 1182px !important; /* Teljes szélesség */
   padding: 0 24px; 
   margin: 0px auto;
+  box-sizing: border-box;
 }
 
 .form_style {
@@ -124,6 +124,7 @@ button {
   margin: 24px 8px;
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.3);
   max-width: 320px;
+  min-width: 320px;
   padding: 24px;
   position: relative;
 }
@@ -160,4 +161,50 @@ button {
   padding: 0px;
   width: max-content;
   margin: 0px auto;
+}
+
+
+
+/* STATISZTIKA OLDAL */
+
+.statistics_table {
+  width: 100%;
+  padding: 0px 0px 24px;
+  border-radius: 16px;
+  border: none;
+  background-color: #ffffff91;
+  overflow: hidden;
+  border-collapse: collapse;
+}
+.statistics_table td {
+  padding: 12px;
+}
+.statistics_table tr, .statistics_table td, .statistics_table th {
+  border: none;
+}
+.statistics_table th {
+  background-color: #fff;
+  padding: 12px;
+}
+.statistics_table tr:nth-child(odd) {
+  background-color: #f2f2f27b;
+}
+.statistics_table tr:nth-child(even) {
+  background-color: #ffffffb9;
+}
+
+
+@media (max-width: 640px){
+
+  .main_container {
+    padding: 12px;
+  }
+  .event-card {
+    min-width: 240px;
+    max-width: 240px;
+  }
+
+  #event_page {
+    padding: 0;
+  }
 }
